style.css
body {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: normal;
    padding: 0px 20px;
}

ul, ol {
    margin: 0;
}

.title {
    font-size: 20pt;
}

.sheet {
    display: block;
}

/* Positioning */
.static {
    position: static;
}

.relative {
    position: relative;
}

.absolute {
    position: absolute;
}

.fixed {
    position: fixed;
}

/* Snippets explain a CSS property, HTML element, 
   or a single concept. */
.snippet {
    display: inline-block;
    vertical-align: top;
    margin: 16px;
    background-color: #eee;
}

.snippet.container {
    margin: 0;
    background-color: white;
    border: 2px solid #ccc;
    border-top: none;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 6px 12px;
}

.section > h2, .snippet > h2 {
    background-color: cornflowerblue;
    color: white;
    font-size: 12pt;
    font-weight: normal;
}

.section > h3, .snippet > h3, .requirement > h3 {
    font-size: 11pt;
    font-weight: normal;
    color: #777;
    background-color: initial;
}

code, .code, span.code {
    font-family: 'Source Code Pro', monospace;
    white-space: pre;
}

code, span.code {
    color: #222;
}

code {
    display: block;
    font-size: 14px;
}

.requirement {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 16px 0;
}

#fixed-position-example {
    width: 500px;
    border: 4px double black;
}

.codeblock {
    padding: 16px 24px;
    overflow: scroll;
}

.codeblock.ex-header {
    margin: 8px;
    padding: 0;
}

.codeblock > hr {
    border-top: 1px dashed #999;
}

/* Formatting code in headers. Default header padding 
   makes code look too loose. */
.code.top {
    padding-bottom: 0;
}

.code.mid {
    padding-top: 0;
    padding-bottom: 0;
}

.code.bot {
    padding-top: 0;
}

code.comment {
    color: #bbb;
}

code.subtle {
    color: #888;
    font-size: 12px;
    padding: 4px;
}

.section {
    display: block;
    padding: 0 0;
    margin: 0 0 0 10px;
}

.border {
    display: inline-block;
    border: 1px dashed #999;
}

.infill {
    display: inline-block;
    background-color: white;
}

.box, .bar, .content-box {
    background-color: #aaa;
    color: white;
}

.box, .bar {
    font-family: 'Source Code Pro', monospace;
    display: inline-block;
    border-radius: 4px;
    min-height: 1.5em;
    text-align: center;
    vertical-align: middle;
}

.box.to-clear {
    padding: 8px;
}

.bar.vertical {
    min-height: 0;
    min-width: 1.5em;
}

.box {
    min-width: 1.5em;
    margin: 4px;
}

.box.padding {
    padding: 4px;
}

.absolute {
    position: absolute;
    left: auto;
    margin: 0;
}

.box.placeholder {
    background-color: white;
    color: #999;
}

.box.invisible {
    visibility: hidden;
    margin: 16px;
}

.box.bigger {
    font-size: 1.5em;
}

.box.biggest {
    font-size: 2em;
}

.box.flatter {
    min-height: 8px;
    margin: 2px;
}

.box.wider {
    min-width: 3em;
}

.fullwidth {
    min-width: 96%;
}

.box.nomargin {
    margin: 0;
}

.box.square {
    border-radius: 0;
}

.box.border.thick {
    border: 3px solid black;
}

/* Styles for creating figures related to the Box model */

.margin-box, .border-box, .padding-box, .content-box {
    padding: 1em; 
    padding-top: 0em; 
}

.border-box {
    background-color: lightgrey; 
}

.ex-padding {
    border: 1px dashed #999;
    margin: 0;
    position: relative;
}

.ex-padding, .padding-box {
    background-color: hsl(120, 20%, 75%); 
}

.padding-color {
    margin: 0;
}

.content-box {
    padding: 0.5em;
    text-indent: 0;
}

.margin-box, .margin {
    background-color: hsla(50, 100%, 50%, 0.20);
}

.margin-box {
    text-indent: -0.75em;
}

.inline {
    display: inline;
}

.block {
    display: block;
}

.inline-block {
    display: inline-block;
}

.flex {
    border: 1px dashed #999;
    border-radius: 4px;
}

.positioned {
    border: 4px double black;
    border-radius: 4px;
}

.flex {
    display: flex;
}

.flex.noborder {
    border: none;
}

.flex.inline {
    display: inline-flex;
}

.valign-middle {
    vertical-align: middle;
}

.flex.row {
    /* override table .row */
    display: flex;
    flex-direction: row;
}

.flex.column {
    flex-direction: column;
}

.flex.row-reverse {
    flex-direction: row-reverse;
}

.flex.column-reverse {
    flex-direction: column-reverse;
}

.flex.wrap {
    flex-wrap: wrap;
}

.flex.nowrap {
    flex-wrap: nowrap;
    overflow: scroll;
}

.flex.wrap-reverse {
    flex-wrap: wrap-reverse;
}

.width-1 {
    width: 1em;
}

.width-2 {
    width: 2em;
}

.width-4 {
    width: 4em;
}

.width-8 {
    width: 8em;
}

.width-10 {
    width: 10em;
}

.width-12 {
    width: 12em;
}

.width-20 {
    width: 20em;
}

.height-1 {
    height: 1em;
}

.height-2 {
    height: 2em;
}

.height-4 {
    height: 4em;
}

.height-6 {
    height: 6em;
}

.height-10 {
    height: 10em;
}

.flex.taller {
    height: 4.5em;
}

.flex.tallest {
    height: 8em;
}

.flex.justify-start {
    justify-content: flex-start;
}

.flex.justify-center {
    justify-content: center;
}

.flex.justify-end {
    justify-content: flex-end;
}

.flex.justify-between {
    justify-content: space-between;
}

.flex.justify-around {
    justify-content: space-around;
}

.flex.align-start {
    align-items: flex-start;
}

.flex.align-center {
    align-items: center;
}

.flex.align-end {
    align-items: flex-end;
}

.flex.align-baseline {
    align-items: baseline;
}

.flex.align-stretch {
    align-items: stretch;
}

div.line:after, div.line-short:after {
    position: absolute;
    content: "";
    display: inline-block;
    border-top: 2px solid grey;
    width: 7em;
    margin-left: 8px;
}

div.line-short:after {
    width: 3.5em;
    /* margin-left: 12px; */
}

.flex.content-start {
    align-content: flex-start;
}

.flex.content-center {
    align-content: center;
}

.flex.content-end {
    align-content: flex-end;
}

.flex.content-between {
    align-content: space-between;
}

.flex.content-around {
    align-content: space-around;
}

.flex.content-stretch {
    align-content: stretch;
}

div.columns {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
}

div.column {
    display: flex;
    flex-direction: column;
}

/* For the flexbox 'order' property snippet. */
.first, .second {
    order: 1;
}

.flex-basis-auto {
    flex-basis: auto;
}

.flex-basis-content {
    flex-basis: content;
}

.flex-basis-50px {
    flex-basis: 50px;
}

.flex-basis-50pct {
    flex-basis: 50%;
}

.flex-basis-100pct {
    flex-basis: 100%;
}

.grow-0 {
    flex-grow: 0;
}

.grow-1 {
    flex-grow: 1;
}

.grow-10 {
    flex-grow: 10;
}

.grow-20 {
    flex-grow: 20;
}

.grow-99 {
    flex-grow: 99;
}

.shrink-0 {
    flex-shrink: 0;
}

.shrink-1 {
    flex-shrink: 1;
}

.shrink-10 {
    flex-shrink: 10;
}

.shrink-20 {
    flex-shrink: 20;
}

.shrink-99 {
    flex-shrink: 99;
}

.align-self-start {
    align-self: flex-start;
}

.align-self-center {
    align-self: center;
}

.align-self-end {
    align-self: flex-end;
}

.align-self-baseline {
    align-self: baseline;
}

.align-self-stretch {
    align-self: stretch;
}

.font-example {
    display: inline-block;
    font-size: 32px;
}

a:link, a:visited {
    color: darkblue;
    text-decoration: none;
}

.nudge-top {
    padding-top: 10px;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.symbol {
    font-size: 22px;
}

.overflow-box {
    width: 250px;
    height: 80px;
}

.overflow-box.hidden {
    overflow: hidden;
}

.overflow-box.scroll {
    overflow: scroll;
}

.overflow-box.visible {
    overflow: visible;
}

.text-example {
    border-bottom: 1px dashed #999;
}

.ex-border-width {
    border-color: black;
    border-style: solid;
}

.ex-float, .ex-clear {
    width: 14em;
    border: 1px dashed #999;
    padding: 4px;
    display: inline-block;
    margin: 4px;
}

.ex-clear-row {
    display: flex;
    align-items: stretch;
}

.ex-border.dark, .ex-border.light {
    width: 1.5em;
    height: 1.5em;
    border-radius: 4px;
    background-color: white;
    border: 3px solid black;
}

.ex-border-side {
    border: 3px solid black;
    border-radius: 0;
}

.ex-border-side.single {
    border-width: 0;
}

.table {
    display: table;
    border-collapse: collapse;
    background-color: white;
}

.center {
    text-align: center;
}

.row {
    display: table-row;
}

.cell {
    display: table-cell;
    padding: 8px;
}

.row > .codeblock {
    display: table-cell;
}

.table.border, .row.border, .cell.border {
    border: 2px solid black;
}

.table.column-borders .cell + .cell {
    border-left: 2px solid black;
}

.table.row-borders .row + .row {
    border-top: 2px solid black;
}

.table.all-borders .cell {
    border: 2px solid black;
}

.caption {
    display: table-caption;
}

.ex-caption {
    padding: 12px 36px;
}

.highlight-border {
    border: 2px solid red;
}

.highlight {
    background-color: #aaa;
}

.ex-vertical-align-cell {
    background-color: white;
    border-collapse: collapse;
    display: table;
    height: 5.5em;
}

.ex-vertical-align-cell .cell {
    border: 2px solid black;
}

.ex-vertical-align-text {
    display: inline-block;
    border-bottom: 1px dashed #999;
}

.box.vertical {
    height: 4em;
    padding: 8px;
    margin: 0 8px;
}

span.ex-align-text {
    /* border-top: 1px solid red; */
    /* border-bottom: 1px solid red; */
}

span.base {
    vertical-align: baseline;
}

span.top {
    vertical-align: top;
}

span.middle {
    vertical-align: middle;
}

span.bottom {
    vertical-align: bottom;
}

span.sub {
    vertical-align: sub;
}

span.super {
    vertical-align: super;
}

.ex-align-box {
    display: inline-flex;
    align-items: center;
    min-width: 3em;
    min-height: 3em;
    background-color: #999;
    border-radius: 4px;
    margin: 4px;
    justify-content: center;
    text-align: center;
    /* padding: 0 8px; */
    color: white;
}

